--- a/src/Components/mainDescription/mainDescription.scss
+++ b/src/Components/mainDescription/mainDescription.scss
@@ -20,10 +20,14 @@
   }
 
   .main-image {
-    width: 396px;
+    //width: 396px;
+    //position: absolute;
+    //left: 44px;
+    //top: 44px;
+    width: 300px;
     position: absolute;
-    left: 44px;
-    top: 44px;
+    left: 92px;
+    top: 67px;
 
     img {
       width: 100%;
